--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">LiftingApp</string>
     <string name="exampleText">Do You Even Lift Bro</string>
+    <string name="random_btn1">Randomize</string>
+    <string name="demo_text">Please press the button</string>
 </resources>
